--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="main_orange">#FFFF5E00</color>
+    <color name="light_orange">#FFAF80</color>
+    <color name="blue">#FF1976D2</color>
 </resources>
